# Scrabble-AI-Agent

./: .gitignore  README.md  baseline_agent.py  dictionary.txt  evaluation.py  evaluation_analysis_20250527_000647.json  evaluator.py  feature_extractor.py  final_model.json  game.py  human_vs_ai_game.py  main.py  move_generator.py  opponent_modeling.py  quackle_agent.py  requirements.txt  rl_agent.py  rl_model_20250526_235620.json  scrabble_agent.py  scrabble_game.py  self_play_data_20250531_171258.json  self_play_data_20250531_211351.json  self_play_data_20250531_230456.json  self_play_model_20250531_171258_ep2000.json  self_play_model_20250531_211351_ep2000.json  self_play_model_20250531_230456_ep100.json  trainer.py  training_stats_20250526_235620.json  trie.py  utils.py
quackle_project/: CMakeLists.txt  makedawg
quackle_project/bindings/: quackle_wrap.cxx  setup.py
quackle_project/bindings/python3/: 20250601_112012825.gcg  20250601_112116015.gcg  __init__.py  quackle.py  quackle_agent.py  test2_selfplay.py
quackle_project/data/raw_lexica/: test.raw
quackle_project/makeminidawg/: output.dawg
quackle_project/quackleio/: CMakeLists.txt
scrabble-env/: pyvenv.cfg
